text alignment fixed

--- a/src/style.css
+++ b/src/style.css
@@ -143,5 +143,5 @@ a {
     color: rgb(79, 72, 97);
 }
 .github { 
-    text-align: cente
+    text-align: center; 
 }
